--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/MATCreditDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/MATCreditDetails.cshtml
@@ -21,7 +21,6 @@
                     <th colspan="2">Company Name</th>
                     <th>Financial Year</th>
                     <th>Assesment Year</th>
-                    <th>Section Category</th>
                     <th></th>
                 </tr>
             </thead>
@@ -47,12 +46,7 @@
                     </td>
                     <td class="tdAssessmentYear"></td>
                     <td>
-                        @Html.DropDownListFor(m => m.ITSectionCategoryId
-                                , new SelectList(Model.ITSectionCategories
-                                , "Id", "Description", Model.ITSectionCategoryId)
-                                , new { @class = "ddITSectionCategory" })
-                    </td>
-                    <td>
+                        @Html.HiddenFor(m => m.ITSectionCategoryId, Model.ITSectionCategoryId)
                         <button type="button" class="btn btn-primary btn-sm btn-search"
                                 id="btnsrch">
                             Search
@@ -78,9 +72,7 @@
             $("#FYAYId").change(function () {
                 loadAssessmentYear();
             });
-            $("#ITSectionCategoryId").change(function () {
-                $("#sectionDiv").html('');
-            });
+
             $("#btnsrch").click(function () {
                 loadMATCreditDetailsData();
             });
