--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
@@ -130,7 +130,8 @@
                     Model.ITReturnDetailsObject,
                     Model.ExtensionList,
                     Model.ITHeadDocumentsUploaderModels,
-                    Model.ITHeadSpecialIncomeModels))
+                    Model.ITHeadSpecialIncomeModels,
+                    Model.ITReturnExtensionListModels))
             }
             if (itHead == "IncomeFromOtherSources")
             {
