--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
@@ -158,6 +158,7 @@
                 dataType: 'html',
                 success: function (data) {
                     $("#sectionDiv").html(data);
+
                     $('.form_datetime').datetimepicker({
                         weekStart: 1,
                         todayBtn: 1,
@@ -167,9 +168,11 @@
                         minView: 2,
                         forceParse: 0
                     });
+
                     $(".numericOnly").keypress(function (e) {
                         return isANumber(e);
                     });
+
                     $(".numericOnly").change(function (e) {
                         if ($.isNumeric($(this).val())) {
                             $(this).val(parseFloat($(this).val()).toFixed(2));
@@ -177,6 +180,16 @@
                         else {
                             $(this).val("0.00");
                         }
+                    });
+
+                    $(".ddSubheadType").change(function (e) {
+                        var isAllowance = $(this).val() == "A";
+                        $(this).closest('tr').find('.ddITSubHeadAllowance').each(function () {
+                            $(this).css("display", isAllowance ? "inline" : "none");
+                        });
+                        $(this).closest('tr').find('.ddITSubHeadDisallowance').each(function () {
+                            $(this).css("display", isAllowance ? "none" : "inline");
+                        });
                     });
 
                     $(".imgSubHead").click(function (e) {
@@ -230,6 +243,13 @@
                             contentType: "application/json",
                             dataType: 'json'
                         });
+                    });
+
+                    $(".btn-add-row-it-sub-head").click(function (event) {
+                        var $tr = $(this).parents('.modal-content').find('tr.trITReturnDetailsExtension:last');
+                        var $clone = $tr.clone();
+                        $clone.find(':text').val('0.00');
+                        $tr.after($clone);
                     });
 
                     $(".btn-add-row").click(function (event) {
